@@ -1,2 +1,2 @@
-DOS2UNIX_VERSION = 5.1.1
-DOS2UNIX_DATE = 2010-08-18
+DOS2UNIX_VERSION = 5.1.2-beta1
+DOS2UNIX_DATE = 2010-11-25
